    However, if the property "IntegerHandle" has been set to "off" then
    the property will return an empty matrix ([]).

 ** Patch and surface graphic objects now use the "FaceNormals" property
    for flat lighting.

 ** "FaceNormals" and "EdgeNormals" for patch and surface graphic
    objects are now calculated automatically if necessary.

 ** Printing using the -dtiff output device will now create compressed
    images using lzw compression.  This change was made for Matlab
    compatibility.  To produce uncompressed images use the -dtiffn
    device.

 ** The FFTW library is now required to perform FFT calculations.
    The FFTPACK sources have been removed from Octave.

 ** The OSMesa library is no longer used.  To print invisible figures
    when using OpenGL graphics, the Qt QOFFSCREENSURFACE feature must be
    available and you must use the qt graphics toolkit.

 ** It is now possible to use files and folders containing Unicode
    characters in Windows.

 ** New functions added in 5.0:

      isfile
      isfolder
      movegui
      openfig
      ordeig
      savefig

 ** Legacy functions.

    The following functions have been declared legacy functions which
    means they are obsolete and should not be used in any new code.
    Unlike deprecated functions, however, their removal from Octave has
    not yet been scheduled.

      Function             | Replacement
      ---------------------|------------------
      findstr              | strfind
      flipdim              | flip
      isdir                | isfolder or dir_in_loadpath
      isequalwithequalnans | isequaln
      isstr                | ischar
      setstr               | char
      strmatch             | strncmp or strcmp
      strread              | textscan
      textread             | textscan

 ** Deprecated functions.

    The following functions have been deprecated in Octave 5.0 and will
    be removed from Octave 7 (or whatever version is the second major